# dumont

./: .gitignore  MANIFEST.in  README.md  build-linux.sh  build-macos.sh  build.sh  build_binary.py  cyclops-worker-linux.spec  cyclops-worker-macos.spec  cyclops-worker-windows.spec  cyclops-worker.spec  dumont-linux.spec  dumont-macos.spec  dumont-windows.spec  dumont.spec  enroll_worker.py  init_dumont.sh  inspect_mlmodel.py  install.bat  install.sh  pyproject.toml  requirements-build.txt  requirements-worker.txt  requirements.txt  setup-worker-env.sh  setup.py  setup_validation.py  start_worker.bat  start_worker.py  start_worker.sh  start_worker_manual.sh  test_benchmark_coreml.py  test_coreml_local.py  test_inference_engines.py
build_scripts/: build-linux.sh  build-macos.sh  build.bat  build.sh
core/: constants.py  job_dispatcher.py
hooks/: hook-coremltools.py
worker/: __main__.py  benchmark.py  cli.py  device_info.py  model_loader.py  run_job_task.py  worker_agent.py
worker/inference_engines/: __init__.py  base.py  coreml_engine.py  onnx_engine.py
worker/legacy/: device_info.py  model_loader.py
